[gd_scene load_steps=15 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://image/gui_background.png" type="Texture" id=2]
[ext_resource path="res://font/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://new_styleboxtexture.tres" type="StyleBox" id=4]
[ext_resource path="res://image/chara_seiga.png" type="Texture" id=5]
[ext_resource path="res://image/chara_meiling.png" type="Texture" id=6]
[ext_resource path="res://image/chara_yachie.png" type="Texture" id=7]
[ext_resource path="res://image/chara_reimu.png" type="Texture" id=8]
[ext_resource path="res://image/chara_junko.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0.917647, 0.968627, 0.305882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_color = Color( 0.917647, 0.968627, 0.305882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_color = Color( 0.917647, 0.968627, 0.305882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 2
outline_color = Color( 0.627451, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 3 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="gui_background" type="Sprite" parent="."]
position = Vector2( 400, 300 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 240.0
margin_top = 60.0
margin_right = 563.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Final Result"
align = 1

[node name="Judgement" type="Label" parent="."]
margin_left = 246.0
margin_top = 420.0
margin_right = 569.0
margin_bottom = 469.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "You Win!"
align = 1

[node name="Back" type="Button" parent="."]
margin_left = 330.0
margin_top = 500.0
margin_right = 405.0
margin_bottom = 525.0
rect_scale = Vector2( 2, 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Back"

[node name="chara_seiga" type="Sprite" parent="."]
position = Vector2( 330, 180 )
texture = ExtResource( 5 )

[node name="chara_meiling" type="Sprite" parent="."]
position = Vector2( 210, 180 )
texture = ExtResource( 6 )

[node name="chara_yachie" type="Sprite" parent="."]
position = Vector2( 82, 360 )
texture = ExtResource( 7 )

[node name="chara_reimu" type="Sprite" parent="."]
position = Vector2( 82, 292 )
texture = ExtResource( 8 )

[node name="chara_junko" type="Sprite" parent="."]
position = Vector2( 440, 180 )
texture = ExtResource( 9 )

[node name="Label7" type="Label" parent="."]
margin_left = 50.0
margin_top = 220.0
margin_right = 248.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Bets on:      Meiling"

[node name="Label8" type="Label" parent="."]
margin_left = 260.0
margin_top = 220.0
margin_right = 404.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Seiga"
align = 1

[node name="Label9" type="Label" parent="."]
margin_left = 370.0
margin_top = 220.0
margin_right = 514.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Junko"
align = 1

[node name="Exp1" type="Label" parent="."]
margin_left = 150.0
margin_top = 280.0
margin_right = 610.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "3 * $ 300  +  4 * $ 400 + 5 * $ 500 + $ 1000 ="

[node name="Exp2" type="Label" parent="."]
margin_left = 150.0
margin_top = 350.0
margin_right = 610.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "3 * $ 300  +  4 * $ 400 + 5 * $ 500 + $ 1000 ="

[node name="Label10" type="Label" parent="."]
margin_left = 480.0
margin_top = 220.0
margin_right = 624.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Cash"
align = 1

[node name="Label11" type="Label" parent="."]
margin_left = 600.0
margin_top = 212.0
margin_right = 744.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Total"
align = 1

[node name="Result1" type="Label" parent="."]
margin_left = 600.0
margin_top = 272.994
margin_right = 744.0
margin_bottom = 309.994
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "$ 9999"
align = 1

[node name="Result2" type="Label" parent="."]
margin_left = 600.0
margin_top = 340.0
margin_right = 744.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "$ 9999"
align = 1
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
